# FAR-Clause-AI-Agent

./: .gitignore  README.md  app.py  compliance-agent-build-plan-updated.docx  pyproject.toml  report.json  report.md
data/corpus/: 52.212-4.txt
data/corpus/AGENCY/HHSAR-352.222-70/: latest.txt
data/corpus/DFARS/252.204-7012/: 2023-12-01.txt  latest.txt
data/corpus/DFARS/252.204-7017/: latest.txt
data/corpus/DFARS/252.204-7019/: latest.txt
data/corpus/DFARS/252.204-7020/: latest.txt
data/corpus/FAR/52.204-21/: latest.txt
data/corpus/FAR/52.204-21/data/corpus/FAR/52.204-21/data/corpus/FAR/52.204-21/: latest.txt
data/corpus/FAR/52.204-25/: latest.txt
data/corpus/FAR/52.222-50/: latest.txt
data/corpus/FAR/52.245-1/: latest.txt
far_clause_ai_agent/: __init__.py  audit_clauses_llm.py  config.py  conflicts.py  corpus.py  coverage_llm.py  extract_clauses.py  ingest.py  llm_client.py  main.py  obligations_llm.py  render.py  scoring.py  search.py
output/: report.json
output/20260716_232320/: report.md
output/20260720_161604/: report.json  report.md
templates/: index.html  result.html
tests/: test_core.py
tests/fixtures/: audit_clauses.json  conflicts.json  coverage.json  obligations.json  sample_proposal.txt  sample_solicitation.txt
uploads/: Functional mock Proposal.docx  Functional mock Solicitation.docx  Proposal Mock.docx  Proposal example.docx  Solicitation Mock.docx  Solicitation RFP example.docx
