[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "far-clause-ai-agent"
version = "0.1.0"
description = "AI agent for FAR clause compliance review"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
far-clause-ai-agent = "far_clause_ai_agent.main:main"

[tool.setuptools]
packages = ["far_clause_ai_agent"]
